--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.datasource.hikari.maximum-pool-size=15
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:10031/account?user=postgres&password=123456
+
+request.url.whiteList = "/account/createAccount"
